Bug 220399 - Crash in color space conversion
Summary: Crash in color space conversion
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ColorManagement-Backend (other bugs)
Version First Reported In: 1.1.0
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-28 14:45 UTC by Jens Mueller
Modified: 2022-02-01 11:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jens Mueller 2009-12-28 14:45:14 UTC
Application that crashed: digikam
Version of the application: 1.1.0 (rev.: 1065554M)
KDE Version: 4.3.4 (KDE 4.3.4)
Qt Version: 4.5.2
Operating System: Linux 2.6.31-17-generic i686
Distribution: Ubuntu 9.10

What I was doing when the application crashed:
I opened a image in editor, click on 'colour -> colour space conversion -> other' and changed the colour space a few times in the drop down box. Looks like a string problem in qt, isn' it?

 -- Backtrace:
Application: digiKam (digikam), signal: Segmentation fault
[Current thread is 1 (Thread 0xb782d700 (LWP 6351))]

Thread 18 (Thread 0xb617cb70 (LWP 6352)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x00a64e15 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x016a478d in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0x06488e67 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0x082f45f4 in Digikam::ScanController::run (this=0x9f1c368) at /home/jens/Dokumente/devel/graphics/digikam/digikam/scancontroller.cpp:502
#5  0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 17 (Thread 0xb56ffb70 (LWP 6354)):
#0  0x00f64e06 in clock_gettime () from /lib/tls/i686/cmov/librt.so.1
#1  0x065a4bf3 in ?? () from /usr/lib/libQtCore.so.4
#2  0x065a4de1 in ?? () from /usr/lib/libQtCore.so.4
#3  0x065a588c in ?? () from /usr/lib/libQtCore.so.4
#4  0x065a3210 in ?? () from /usr/lib/libQtCore.so.4
#5  0x0187af90 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#6  0x0187b351 in ?? () from /lib/libglib-2.0.so.0
#7  0x0187b863 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#8  0x065a3067 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#9  0x06576c79 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#10 0x065770ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0x06484b73 in QThread::exec() () from /usr/lib/libQtCore.so.4
#12 0x008f8d0b in Digikam::ImageFilterModelWorker::Thread::run (this=0xa17ba00)
    at /home/jens/Dokumente/devel/graphics/qtcreator-build/digikam/digikam/../../../digikam/libs/models/imagefiltermodelthreads.h:66
#13 0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#14 0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#15 0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 16 (Thread 0xb4efeb70 (LWP 6355)):
#0  0x00a62d4b in pthread_mutex_lock () from /lib/tls/i686/cmov/libpthread.so.0
#1  0x016a4956 in pthread_mutex_lock () from /lib/tls/i686/cmov/libc.so.6
#2  0x0187afcf in g_main_context_prepare () from /lib/libglib-2.0.so.0
#3  0x0187b351 in ?? () from /lib/libglib-2.0.so.0
#4  0x0187b863 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#5  0x065a3067 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x06576c79 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0x065770ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#8  0x06484b73 in QThread::exec() () from /usr/lib/libQtCore.so.4
#9  0x008f8d0b in Digikam::ImageFilterModelWorker::Thread::run (this=0xa0a4c90)
    at /home/jens/Dokumente/devel/graphics/qtcreator-build/digikam/digikam/../../../digikam/libs/models/imagefiltermodelthreads.h:66
#10 0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#11 0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#12 0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 15 (Thread 0xb467db70 (LWP 6356)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x00a64e15 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x016a478d in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0x06488e67 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0x0983b0f9 in Digikam::LoadSaveThread::run (this=0xa3d1020) at /home/jens/Dokumente/devel/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 14 (Thread 0xb3e7cb70 (LWP 6357)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x01689ba6 in poll () from /lib/tls/i686/cmov/libc.so.6
#2  0x0188854b in g_poll () from /lib/libglib-2.0.so.0
#3  0x0187b56b in ?? () from /lib/libglib-2.0.so.0
#4  0x0187b863 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#5  0x065a3067 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x06576c79 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0x065770ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#8  0x06484b73 in QThread::exec() () from /usr/lib/libQtCore.so.4
#9  0x082ebd57 in Digikam::MetadataManagerWorker::Thread::run (this=0xa413600) at /home/jens/Dokumente/devel/graphics/qtcreator-build/digikam/digikam/../../../digikam/digikam/metadatamanager_p.h:143
#10 0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#11 0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#12 0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 13 (Thread 0xb367bb70 (LWP 6358)):
#0  0x00f64e06 in clock_gettime () from /lib/tls/i686/cmov/librt.so.1
#1  0x065a4bf3 in ?? () from /usr/lib/libQtCore.so.4
#2  0x065a4de1 in ?? () from /usr/lib/libQtCore.so.4
#3  0x065a588c in ?? () from /usr/lib/libQtCore.so.4
#4  0x065a3210 in ?? () from /usr/lib/libQtCore.so.4
#5  0x0187af90 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#6  0x0187b351 in ?? () from /lib/libglib-2.0.so.0
#7  0x0187b863 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#8  0x065a3067 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#9  0x06576c79 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#10 0x065770ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0x06484b73 in QThread::exec() () from /usr/lib/libQtCore.so.4
#12 0x082ebd57 in Digikam::MetadataManagerWorker::Thread::run (this=0xa412430) at /home/jens/Dokumente/devel/graphics/qtcreator-build/digikam/digikam/../../../digikam/digikam/metadatamanager_p.h:143
#13 0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#14 0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#15 0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 12 (Thread 0xb2e7ab70 (LWP 6359)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x00a64e15 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x016a478d in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0x06488e67 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0x0983b0f9 in Digikam::LoadSaveThread::run (this=0xa2c08a0) at /home/jens/Dokumente/devel/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 11 (Thread 0xb08f6b70 (LWP 6360)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x00a65142 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x016a47e4 in pthread_cond_timedwait () from /lib/tls/i686/cmov/libc.so.6
#3  0x0210f9ff in ?? () from /usr/lib/libxine.so.1
#4  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#5  0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 10 (Thread 0xafceab70 (LWP 6361)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x01690981 in select () from /lib/tls/i686/cmov/libc.so.6
#2  0x02138be0 in xine_usec_sleep () from /usr/lib/libxine.so.1
#3  0x0211d011 in ?? () from /usr/lib/libxine.so.1
#4  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#5  0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 9 (Thread 0xaf4e9b70 (LWP 6362)):
#0  0x018510f7 in ?? () from /lib/libglib-2.0.so.0
#1  0x0187b47c in ?? () from /lib/libglib-2.0.so.0
#2  0x0187b863 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x065a3067 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x06576c79 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x065770ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x06484b73 in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x01dfc20a in ?? () from /usr/lib/qt4/plugins/phonon_backend/phonon_xine.so
#8  0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#10 0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 8 (Thread 0xaeaffb70 (LWP 6365)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x01687ecb in read () from /lib/tls/i686/cmov/libc.so.6
#2  0x01d23932 in ?? () from /usr/lib/libasound.so.2
#3  0x01d2071d in snd_ctl_read () from /usr/lib/libasound.so.2
#4  0x01d1caff in snd_hctl_handle_events () from /usr/lib/libasound.so.2
#5  0x01d28911 in snd_mixer_handle_events () from /usr/lib/libasound.so.2
#6  0x08a83c89 in ?? () from /usr/lib/xine/plugins/1.26/xineplug_ao_out_alsa.so
#7  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#8  0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 7 (Thread 0xae0ffb70 (LWP 6366)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x00a64e15 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x016a478d in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0x021205ee in ?? () from /usr/lib/libxine.so.1
#4  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#5  0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 6 (Thread 0xab4ffb70 (LWP 6376)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x00a64e15 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x016a478d in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0x06488e67 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0x0983b0f9 in Digikam::LoadSaveThread::run (this=0xad4e1c8) at /home/jens/Dokumente/devel/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 5 (Thread 0xad0fdb70 (LWP 6383)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x00a64e15 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x016a478d in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0x06488e67 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0x0983b0f9 in Digikam::LoadSaveThread::run (this=0xb0ba708) at /home/jens/Dokumente/devel/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 4 (Thread 0xad8feb70 (LWP 6384)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x00a64e15 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x016a478d in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0x06488e67 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0x0983b0f9 in Digikam::LoadSaveThread::run (this=0xb386030) at /home/jens/Dokumente/devel/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 3 (Thread 0xa490eb70 (LWP 6404)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x00a64e15 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x016a478d in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0x06488e67 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0x0983b0f9 in Digikam::LoadSaveThread::run (this=0xc5ca230) at /home/jens/Dokumente/devel/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 2 (Thread 0xac0fbb70 (LWP 6405)):
#0  0x00f6e422 in __kernel_vsyscall ()
#1  0x00a64e15 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x016a478d in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0x06488e67 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0x0983b0f9 in Digikam::LoadSaveThread::run (this=0xc8e5508) at /home/jens/Dokumente/devel/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0x06487e32 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00a6080e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0x016977ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb782d700 (LWP 6351)):
[KCrash Handler]
#6  0x04018f51 in QString::isDetached (this=0x0) at /usr/include/qt4/QtCore/qstring.h:703
#7  0x04018f76 in qIsDetached<QString> (t=...) at /usr/include/qt4/QtCore/qstring.h:1077
#8  0x04019cdc in QCache<QString, QString>::trim (this=0xcc5e4ec, m=9) at /usr/include/qt4/QtCore/qcache.h:207
#9  0x0401989f in QCache<QString, QString>::insert (this=0xcc5e4ec, akey=..., aobject=0x0, acost=1) at /usr/include/qt4/QtCore/qcache.h:187
#10 0x04018571 in DigikamImagesPluginCore::ProfileConversionTool::slotProfileChanged (this=0xc79f2b8)
    at /home/jens/Dokumente/devel/graphics/digikam/imageplugins/coreplugin/profileconversiontool.cpp:244
#11 0x04016252 in DigikamImagesPluginCore::ProfileConversionTool::qt_metacall (this=0xc79f2b8, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbff86dd8)
    at /home/jens/Dokumente/devel/graphics/qtcreator-build/digikam/imageplugins/coreplugin/profileconversiontool.moc:76
#12 0x0658e263 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#13 0x0658eec2 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#14 0x05262673 in QComboBox::currentIndexChanged(int) () from /usr/lib/libQtGui.so.4
#15 0x0526483a in ?? () from /usr/lib/libQtGui.so.4
#16 0x05266ebb in ?? () from /usr/lib/libQtGui.so.4
#17 0x0526704c in ?? () from /usr/lib/libQtGui.so.4
#18 0x0526c7ca in QComboBox::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtGui.so.4
#19 0x00bb8aea in KDcrawIface::SqueezedComboBox::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdcraw.so.7
#20 0x098de36a in Digikam::IccProfilesComboBox::qt_metacall (this=0xcc638f0, _c=QMetaObject::InvokeMetaMethod, _id=39, _a=0xbff87068)
    at /home/jens/Dokumente/devel/graphics/qtcreator-build/digikam/digikam/iccprofilescombobox.moc:60
#21 0x0658e263 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#22 0x0658eec2 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#23 0x05521eb3 in ?? () from /usr/lib/libQtGui.so.4
#24 0x05264444 in ?? () from /usr/lib/libQtGui.so.4
#25 0x0657783a in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#26 0x04e93f2c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#27 0x04e9c033 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#28 0x02dd51aa in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#29 0x065786cb in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#30 0x04e9af6e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&) () from /usr/lib/libQtGui.so.4
#31 0x04f09c87 in ?? () from /usr/lib/libQtGui.so.4
#32 0x04f08c4b in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#33 0x04f35502 in ?? () from /usr/lib/libQtGui.so.4
#34 0x01877e88 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#35 0x0187b730 in ?? () from /lib/libglib-2.0.so.0
#36 0x0187b863 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#37 0x065a302c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#38 0x04f34be5 in ?? () from /usr/lib/libQtGui.so.4
#39 0x06576c79 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#40 0x065770ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#41 0x0657953f in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#42 0x04e93dd7 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#43 0x08380f94 in main (argc=1, argv=0xbff89184) at /home/jens/Dokumente/devel/graphics/digikam/digikam/main.cpp:195

Reported using DrKonqi
Comment 1 Marcel Wiesweg 2009-12-28 17:17:50 UTC
The crash is due to some non-standard use of QCache here, I want QCache only to keep the list of favorite strings, and drop least often used ones.
I never tested with more than ten favorites though, when this crashes.
Comment 2 Marcel Wiesweg 2009-12-29 14:57:33 UTC
SVN commit 1067385 by mwiesweg:

To use QCache as I intend, we need to insert some dummy bytes as payload.

BUG: 220399

 M  +2 -1      NEWS  
 M  +3 -3      imageplugins/coreplugin/profileconversiontool.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1067385