To use QCache as I intend, we need to insert some dummy bytes as payload.

BUG: 220399

svn path=/trunk/extragear/graphics/digikam/; revision=1067385